--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".PhrasesActivity"></activity>
         <activity android:name=".ColorsActivity" />
         <activity android:name=".FamilyActivity" />
-        <activity android:name=".NumbersActivity" />
+        <activity android:name=".NumbersActivity" android:label="Numbers" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
